@@ -28,7 +28,7 @@ fsplugin.messages.failed.purge.worker.cronExpression=0 0/1 * * * ?
 fsplugin.messages.received.purge.worker.cronExpression=0 0/1 * * * ?
 
 # The cron expression used to trigger the worker to purge the orphan lock files.
-fsplugin.messages.locks.purge.worker.cronExpression=0 0/1 * * * ?
+fsplugin.messages.locks.purge.worker.cronExpression=0 0 0/1 * * ?
 
 #The threshold value in MB to switch from synchronous to asynchronous saving of payloads
 #fsplugin.messages.payload.schedule.threshold=1000
@@ -91,6 +91,9 @@ fsplugin.messages.failed.action=delete
 # The expiration limit (expressed in seconds) used to purge the older files in the FAILED folder
 # E.g.: 600
 fsplugin.messages.failed.purge.expired=600
+
+# The expiration limit (expressed in seconds) used to purge the older orphaned lock files
+fsplugin.messages.locks.purge.expired=600
 
 # The expiration limit (expressed in seconds) used to purge the older files in the IN folder.
 # E.g.: 600
