@@ -69,7 +69,7 @@ public abstract class FSAbstractPurgeService {
 
     protected void checkAndPurge(FileObject file, Integer expirationLimit) {
         try {
-            if (expirationLimit != null && isFileOlder(file, expirationLimit)) {
+            if (fsFilesManager.isFileOlderThan(file, expirationLimit)) {
                 if (file.isFile()) {
                     LOG.debug("File [{}] is too old. Deleting", file.getName());
                     fsFilesManager.deleteFile(file);
@@ -87,14 +87,6 @@ public abstract class FSAbstractPurgeService {
     }
 
     protected abstract Integer getExpirationLimit(String domain);
-
-    protected boolean isFileOlder(FileObject file, Integer expirationLimit) throws FileSystemException {
-        long currentMillis = System.currentTimeMillis();
-        long modifiedMillis = file.getContent().getLastModifiedTime();
-        long fileAgeSeconds = (currentMillis - modifiedMillis) / 1000;
-
-        return fileAgeSeconds > expirationLimit;
-    }
 
     /**
      * Returns all the files (or folders) to be deleted after a period ot time
